--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Lab1</artifactId>
+	<artifactId>Lab-2-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Lab1</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Lab-2-backend</name>
+	<description>Lab 1</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
