--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>RELEASE</version>
+            <version>2.6.6</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
 
+
+
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
