--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 java.runtime.version=11
+maven.version=3.3.9
