--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.h2.console.enabled=true
-java.runtime.version=11
-maven.version=3.3.9
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2
+server.port=8081
